--- a/trunk/CBLS/.project
+++ b/trunk/CBLS/.project
@@ -31,7 +31,7 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.buildLocation</key>
-					<value>${workspace_loc:/CBLS/Linux Debug}</value>
+					<value>${workspace_loc:/CBLS/OSX Debug}</value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.cleanBuildTarget</key>
